fix(network): no more double scrollbar in Edit

--- a/src/ui/views/Network/style.less
+++ b/src/ui/views/Network/style.less
@@ -107,26 +107,29 @@ h2.category-name {
 /** network edit page **/
 .network-edit {
   padding: 0;
-  .ant-form-item-required {
-    font-family: MontserratBold;
+  .input-error {
+    color: #E05651;
+    margin-top: -12px;
+    margin-bottom: 24px;
   }
-  .ant-form-item-required::before {
-    content: '' !important;
-  }
-  .ant-form-item-label {
-    padding: 0 0 10px;
-    .label {
+  h1 {
+      margin-bottom: 12px;
       font-size: 16px;
       color: #364361;
-    }
+  }
+  h1.required {
+    font-family: MontserratBold;
   }
 
-  .ant-form-item-control-input {
+  // .ant-form-item-control-input {
     input {
       background-color: #F8FAFC;
       height: 36px;
       border-radius: 8px !important;
       border-color: #F8FAFC;
+      margin-bottom: 24px;
+      width: 100%;
+      padding: 11px 16px;
     }
     input::placeholder {
       color: #A3B4CC !important;
@@ -134,18 +137,17 @@ h2.category-name {
     input::-webkit-input-placeholder {
       color: #A3B4CC !important;
     }
-  }
+  // }
   .ant-select-selector {
     background: #F8FAFC !important;
     border-radius: 8px !important;
     border: 0px !important;
   }
-  form .form-body {
+  .form-body {
     padding: 0 4px;
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 478px;
-    // margin-bottom: 24px;
+    height: 455px;
   }
 }
 
